--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,8 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "reset";
+@import "config/colors";
 @import "modules/chat-side";
 @import "modules/chat-main";
-
-
-
+@import "modules/user";
+@import "modules/flash";
