--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,18 +5,19 @@
         = current_user.name
       %ul.header__box__menu
         %li.header__box__menu__new-group
-        = link_to do
+        = link_to new_group_path do
           = icon('fas', 'pen-square', class: 'icon')
           %span<>
         %li.header__box__menu__edit-user
         = link_to edit_user_path(current_user) do
           = icon('fas', 'cog', class: 'icon')
           %span<>
-
+ 
   .groups
+  - current_user.groups.each do |group|
     = link_to "#" , class: "group" do
       %p.group__group-name
-        グループ名
+        = group.name
       %p.group__group-message
         まだメッセージはありません
   
