--- a/app/assets/stylesheets/modules/chat-main.scss
+++ b/app/assets/stylesheets/modules/chat-main.scss
@@ -1,121 +1,165 @@
-* {
-  box-sizing: border-box;
-}
- // メイン部
- .chat-main {
-  height: 100vh;
-  width: calc(100vw - 300px);
-  background-color: white;
-  float: right;
-  // ヘッダー
-    &__header {
-      background-color: white;
-      height: 100px;
-      width: calc(100vw - 300px);
-      display: flex;
-      // メインヘッダー
-      &__main {
-        width: calc(100vw - 300px - 80px);
-        margin: 0 auto;
-        display: flex;
-        justify-content: space-between;
-          // ヘッダー左
-        .left {
-            h2 {
-              font-size: 20px;
-              color: #333333;
-              margin-top: 35px;
-              margin-bottom: 15px;
-            }
-            ul {
-              font-size: 12px;
-              color: #999999;
-              display: flex;
-              list-style: none;
-              margin: 0;
-              padding: 0;
-            .member-name {
-              text-decoration: none;
-              margin-left: 5px;
-              color: #999999;
-            }
-          }   
-        }
-        // ヘッダー右
-        .main__header__edit-btn {
-          height: 40px;
-          line-height: 40px;
-          padding: 0 20px;
-          margin-top: 30px;
-          border: solid 1px lightBlue;
-          }
-          a {
-            text-decoration: none;
-            color: lightBlue;
-          }           
+
+.main-header {
+  height: 100px;
+  padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: solid 1px #eee;
+  overflow: scroll;
+
+  &__left-box {
+      margin-top: 35px;
+    &__current-group {
+    font-size: 20px;
+    color: #333;
+    margin-bottom: 0px;
+    &__member-list {
+    display: flex;
+    font-size: 12px;
+    color: #999999;   
+    margin-top: 30px; 
+      &__member{
+        margin: 0;
+        padding: 0;
+
+      }
       }
     }
+  }
+}           
+a{
+color: #38aef0;
+}
 
-      .messages {
-        background-color: #fafafafa;
-        height: calc(100vh - 100px - 90px);
-        width: calc(100vw - 300px);
-        padding: 46px 40px;
-          .message {
-            padding-bottom: 40px;
-              &__info {
-                margin-bottom: 10px;
-                display: flex;
-                &__talker {
-                  color: #333;
-                  font-size: 16px;
-                }
-                &__date {
-                    color: #999;
-                    font-size: 12px;
-                    margin-left: 10px;
-                }
-              }
-              &__text {
-                font-size: 14px;
-                margin-bottom: 10px;
-                color: #434A54;
-              }
-          }
-      }
+.main-header__edit-btn {
+  height: 40px;
+  line-height: 40px;
+  padding: 0 20px;
+  margin-top: 30px;
+  border: solid 1px #38aef0;
+  position: absolute;
+  right: 40px;
+}
 
-        .form {
-          background-color: #DDDDDD;
-          box-sizing: border-box;
-          height: 90px;
-          padding: 20px 50px 20px 40px;
-          &__message {
-            border: none;
-            float: left;
-            height: 50px;
-            width: calc(100% - 150px);
-          }
-          &__mask {
-            background-color: white;
-            float: left;
-            height: 50px;
-            padding-right: 10px;
-            &__image {
-              font-size: 20px;
-              line-height: 50px;
-            }
-            .hidden {
-              display: none;
-            }
-          }
-          &__submit {
-            background-color: lightBlue;
-            color: white;
-            float: right;
-            font-size: 16px;
-            height: 50px;
-            margin-left: 15px;
-            padding: 0 30px;
-          }
-        }
+
+
+
+
+.chat_main {
+  width: calc(100vw - 300px);
+  float: left;
+}
+.messages {
+  height: calc(100vh - 283px);
+  padding: 46px 40px;
+  background-color: #fafafa;
+  overflow: scroll;
+}
+.message {
+  padding-bottom: 40px;
+
+
+  &__upper-info {
+    display: flex;
+    margin-bottom: 10px;
+    font-size:12px;
+  }
+  &__talker {
+    color: #434a54;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  &__text {
+    color: #434a54;
+    font-size: 14px;
+    margin-bottom: 10px;
+  }
+}
+
+
+
+
+// フォーム作成
+
+.form {
+  background-color: #DDDDDD;
+  box-sizing: border-box;
+  height: 90px;
+  padding: 20px 50px 20px 40px;
+  &__message {
+    border: none;
+    float: left;
+    height: 50px;
+    width: calc(100% - 150px);
+  }
+  &__mask {
+    background-color: #FFFFFF;
+    float: left;
+    height: 50px;
+    padding-right: 10px;
+  }
+  &__image {
+    font-size: 20px;
+    line-height: 50px;
+  }
+  
+  .hidden {
+    display: none;
+  }
+  &__submit {
+    background-color: #38aef0;
+    border: none;
+    color: #FFFFFF;
+    float: right;
+    font-size: 16px;
+    height: 50px;
+    margin-left: 15px;
+    padding: 0 30px;
+  }
+}
+
+.main-header__left-box__menber-list{
+  display: flex;
+  font-size: 12px;
+  color: #999999;
+}
+.main-header__left-box__member-list__member {
+  display: flex;
+  font-size: 12px;
+  color: #999999;
+  margin-left: 0.3rem;
+  margin-top: 15px;
+}
+
+
+.fa-edit:before {
+  content: "";
+    color: white;
+}
+.fa-cog:before {
+  content: "";
+    color: white;
+}
+
+
+.header__name {
+  font-weight: bold;
+  font-size:16px;
+}
+
+
+.upper-message {
+  display: flex;
+  margin-bottom: 10px;
+
+  &__user-name {
+    color: #434a54;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  &__date {
+    color: #999999;
+    font-size: 12px;
+    margin-left: 10px;
+  }
 }
