--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,36 +1,25 @@
-.chat-main
-  .chat-main__header
-    .chat-main__header__main
-      .left
-        %h2.group-about
-          グループ概要
-        %ul.member-list
-          member:
-          %li
-          = link_to "#", class: "member-name" do
-            hanako
-          %li
-      .main__header__edit-btn
-        = link_to "#" do
-          Edit
-
+.chat_main
+  .main-header
+    .main-header__left-box
+      .main-header__left-box__current-group 
+        = @group.name
+        .main-header__left-box__menber-list 
+          
+        .main-header__left-box__member-list__member
+          Menber :
+          - @group.group_users.each do |group_user|
+            = group_user.user.name
+    = link_to edit_group_path(@group) do
+      .main-header__edit-btn Edit
+     
   .messages
-    = render @messages
-    .message
-      .message__info
-        %p.message__info__talker
-          kondo
-        %p.message__info__date
-          2019/12/11(Wed) 11:45:09
-      %p.message__text
-        Hello
-   
+    = render partial: 'message', collection: @messages
 
   .form
-    %form
-      %input.form__message
+    = form_for [@group, @message] do |f|
+      = f.text_field :content, class: 'form__message', placeholder: 'type a message'
       .form__mask
-        %label.form__mask__image
-          = icon('fa','image',class: 'icon')
-          %input.hidden{type: 'file'}
-      %input.form__submit{type: 'submit', value: 'Send'}
+        = f.label :image, class: 'form__mask__image' do
+          = icon('fas', 'image', class: 'icon')
+          = f.file_field :image, class: 'hidden'
+      = f.submit 'Send', class: 'form__submit'
