--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,23 +1,22 @@
 .chat-side
-  .header
-    .header__box
-      %p.header__box__user-name
-        = current_user.name
-      %ul.header__box__menu
-        %li.header__box__menu__new-group
-        = link_to new_group_path do
-          = icon('fas', 'pen-square', class: 'icon')
-          %span<>
-        %li.header__box__menu__edit-user
-        = link_to edit_user_path(current_user) do
-          = icon('fas', 'cog', class: 'icon')
-          %span<>
- 
+  .side-header
+    .side-header__box
+      = current_user.name
+      %p.side-header__box__user-name
+      %ul.side-header__box__menu
+        %li.side-header__box__menu__btn
+          = link_to new_group_path do
+            = icon'fas fa-edit',class: 'btn'
+        %li.side-header__box__menu__btn2
+          = link_to edit_user_path(current_user) do
+            =icon'fas fa-cog',class: 'btn2'
   .groups
-  - current_user.groups.each do |group|
-    = link_to group_messages_path(group) do
-      %p.group__group-name
-        = group.name
-      %p.group__group-message
-        = group.show_last_message
+    - current_user.groups.each do |group|
+      .a
+        .group
+          = link_to group_messages_path(group) do
+            .group__name
+              = group.name
+            .group__message
+              = group.show_last_message
   
